Feat: Add new controller to stop the thread